# Feed-Forward-Neural-Network

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: ccpp.yml
include/: connection.h  layer.h  neuralNetwork.h
src/: connection.cc  layer.cc  neuralNetwork.cc  neurtalNetwork.cc
tests/: test_connection.cc  test_layer.cc  test_main.cc  test_neuralNetwork.cc
